// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Joi array items unnest 1`] = `
"import Joi from 'joi';

export const tags = Joi.array(Joi.string());
"
`;

exports[`Joi array items with multiple schemas becomes a union item 1`] = `
"import Joi from 'joi';

export const values = Joi.array(Joi.union([Joi.string(), Joi.number(), Joi.boolean()]));
"
`;

exports[`unnests array items through comments and preserves complex arguments 1`] = `
"import Joi from 'joi';
const schema = Joi.array(Joi.union([Joi.string(), makeSchema({ values: [1, 2] })]));"
`;
